# C14---Engenharia-de-Software

./: .gitignore  README.md  main.py  pom.xml  pyproject.toml
.github/workflows/: python-app.yml
C14---Engenharia-de-Software/github-actions/app/: main.py
app/: models.py
github-actions/: .flake8  README.md  pyproject.toml  pyproject.unit.toml
github-actions/app/: database.py  main.py
github-actions/tests/: test_integration.py  test_main.py  test_unit.py  test_unity.py
scripts/: shell.sh
testes unitarios/: fila.py  pilha.py  teste_fila.py  teste_pilha.py
testes unitarios 2/: README.md  system.py  test_system.py
