[project]
name = "github-actions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.117.1",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "uvicorn[standard]>=0.37.0",
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing"
testpaths = [
    "tests"
]

[tool.coverage.report]
# Define percentual mínimo de cobertura aceitável
fail_under = 90
show_missing = true
skip_covered = true